re #164 - fixes for word wrapping, renamed docman_table_content to koowa_wrapped_content and moved it so we can use this more general

--- a/code/media/koowa/com_koowa/scss/koowa/admin/_table.scss
+++ b/code/media/koowa/com_koowa/scss/koowa/admin/_table.scss
@@ -105,11 +105,4 @@
       margin: 0 auto;
     }
   }
-
-  .docman_table_wrapped {
-    display: table;
-    width: 100%;
-    table-layout: fixed;
-    @include wrap_words;
-  }
 }
