--- a/code/media/koowa/com_koowa/scss/koowa/generic/_header.scss
+++ b/code/media/koowa/com_koowa/scss/koowa/generic/_header.scss
@@ -13,13 +13,8 @@ table .koowa_header {
   padding: 0;
 }
 
-.koowa_header__link {
-  display: table-row;
-}
-
 .koowa_header__image {
   height: $iconSize;
-  @include wrap-words;
 }
 
 .koowa_header__item {
@@ -27,7 +22,10 @@ table .koowa_header {
   vertical-align: middle;
   min-width: $iconSize;
   width: 99%;
-  @include wrap-words;
+
+  .label {
+    margin-left: .25em;
+  }
 }
 
 .koowa_header__item--image_container {
